package com.group8.evcoownership.enums;

public enum Role {
    Co_owner,
    Staff,
    Admin,
    Technician
}